Update booking URL, favicon, and add Google Maps embed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fi">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salon LisaHairz – Kampaamo Lahti | Leikkaukset, värjäykset &amp; hiushoidot</title>
     <meta
@@ -35,9 +35,9 @@
           "addressLocality": "Lahti",
           "addressCountry": "FI"
         },
-        "url": "https://timma.fi/yritys/salon-lisahairz",
+        "url": "https://varaa.timma.fi/salonlisahairz",
         "sameAs": [
-          "https://timma.fi/yritys/salon-lisahairz",
+          "https://varaa.timma.fi/salonlisahairz",
           "https://www.instagram.com/salonlisahairz/",
           "https://www.facebook.com/salonlisahairz/"
         ]
